better dataset format

--- a/dataset-creation/package.json
+++ b/dataset-creation/package.json
@@ -9,6 +9,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "glob": "^11.0.2",
     "puppeteer": "^24.8.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-adblocker": "^2.13.6",
